--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 @charset "UTF-8";
+@import url(estilos/header.css);
 
 :root {
   --cor-de-fundo: #EBECEE;
+  --cor-do-cabecalho: #FFFFFF;
 }
 
 body {
   background-color: var(--cor-de-fundo);
-}
-
-h1 {
-  background-color: white;
 }
