--- a/style.css
+++ b/style.css
@@ -6,8 +6,12 @@
   --cor-do-cabecalho: #FFFFFF;
   --cor-menu-hamburguer-titulo: #EB9B00;
   --cor-menu-hamburguer-item: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+  --fonte-principal: 'Poppins', sans-serif;
 }
 
 body {
   background-color: var(--cor-de-fundo);
+  font-family: var(--fonte-principal);
+  font-size: 16px;
+  font-weight: 400;
 }
