--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url(estilos/header.css);
 @import url(estilos/banner.css);
+@import url(estilos/carrossel.css);
 
 :root {
   --cor-de-fundo: #EBECEE;
