--- a/estilos/carrossel.css
+++ b/estilos/carrossel.css
@@ -22,3 +22,52 @@
   position: initial;
   margin: .5em 0;
 }
+.card {
+  background: var(--cor-do-cabecalho);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  margin: 1em;
+  padding: 1em;
+}
+
+.card__descricao {
+  margin-bottom: .5em;
+}
+
+.card__descricao,
+.card__botoes {
+  display: flex;
+  justify-content: space-between;
+}
+
+.botoes {
+  display: flex;
+}
+
+.descricao__titulo {
+  color: var(--cor-menu-hamburguer-titulo);
+  font-weight: 700;
+}
+
+.descricao__titulo-livro {
+  color: var(--cor-azul);
+  font-size: 18px;
+  font-weight: 700;
+  margin: .5em 0;
+}
+
+.descricao__texto {
+  font-size: 14px;
+}
+
+.botoes__item {
+  margin: 0 .5em;
+}
+
+.botoes__ancora {
+  background-color: var(--cor-menu-hamburguer-titulo);
+  padding: 1em 2.2em;
+  color: var(--cor-do-cabecalho);
+  text-decoration: none;
+  font-weight: 700;
+}
