--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 @import url(estilos/carrossel.css);
 @import url(estilos/topicos.css);
 @import url(estilos/contato.css);
+@import url(estilos/rodape.css);
 
 :root {
   --cor-de-fundo: #EBECEE;
