--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   --cor-azul-degrade-menu: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
   --cor-azul: #002F52;
   --fonte-principal: 'Poppins', sans-serif;
-
+  --fonte-titulo: 'Josefin Sans', sans-serif;
 }
 
 body {
