--- a/estilos/header.css
+++ b/estilos/header.css
@@ -22,6 +22,11 @@
   align-items: center;
 }
 
+.container__titulo,
+.opcoes {
+  display: none;
+}
+
 .container__imagem {
   padding: 1em;
 }
@@ -62,5 +67,32 @@
 }
 
 @media (min-width: 1024px) {
+  .container__titulo, 
+  .container__titulo-negrito {
+    display: inline-block;
+    font-family: var(--fonte-secundaria);
+    font-size: 30px;
+  }
+
+  .container__titulo {font-weight: 400;}
+
+  .container__titulo-negrito {font-weight: 700;}
+
+  .opcoes {
+    display: flex;
+  }
+
+  .opcoes__item {
+    padding: 0 1em;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--preto);
+  }
+
+  .favorito__transparente,
+  .cabecalho__menu-hamburguer {
+    display: none;
+  }
+
   
 }
