--- a/estilos/banner.css
+++ b/estilos/banner.css
@@ -34,3 +34,9 @@
   background: url(../img/lupa.svg) no-repeat;
   background-position: 1em;
 }
+
+@media (min-width: 1024px) {
+  .banner__titulo {font-size: 36px;}
+  .banner__pesquisa {width: 50%;}
+  .banner__pesquisa::placeholder {background-position: 7em;}
+}
