--- a/estilos/banner.css
+++ b/estilos/banner.css
@@ -39,4 +39,5 @@
   .banner__titulo {font-size: 36px;}
   .banner__pesquisa {width: 50%;}
   .banner__pesquisa::placeholder {background-position: 7em;}
+  .banner {padding: 4.5em 4em;}
 }
