--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
+
 @import url(estilos/header.css);
 @import url(estilos/banner.css);
 @import url(estilos/carrossel.css);
@@ -13,8 +16,8 @@
   --cor-azul-degrade-menu: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
   --cor-azul: #002F52;
   --preto: #000;
-  --fonte-principal: 'Poppins', sans-serif;
-  --fonte-secundaria: 'Josefin Sans', sans-serif;
+  --fonte-principal: 'Poppins';
+  --fonte-secundaria: 'Josefin Sans';
 }
 
 body {
