--- a/estilos/carrossel.css
+++ b/estilos/carrossel.css
@@ -72,3 +72,39 @@
   text-decoration: none;
   font-weight: 700;
 }
+
+@media (min-width: 1024px) {
+  .carrossel__titulo {
+    font-size: 26px;
+    padding: 2em 0 1em;
+  }
+  .swiper-pagination {
+    margin: 2em 0 3em;
+  }
+
+  .swiper {
+    width: 80%;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    display: block;
+    top: 60%;
+    background: var(--cor-azul-degrade-menu);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    padding: .5em 1em;
+    border-radius: 100%;
+  }
+
+  .swiper-button-prev::after,
+  .swiper-button-next::after {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 1.4em;
+    font-weight: bold;
+    line-height: 2;
+    padding: 0 5px;
+}
+}
