--- a/estilos/topicos.css
+++ b/estilos/topicos.css
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: clamp(0.1em, 2.5vw, 2em);
   justify-content: center;
 }
 
@@ -30,4 +31,14 @@
   text-decoration: none;
   font-size: 14px;
   font-weight: 700;
+}
+
+@media (min-width: 1024px) {
+  .topicos__titulo {font-size: 24px;}
+  .topicos__link {font-size: 24px;}
+  .topicos__lista {
+    width: 80%;
+    margin: 0 auto;
+    padding: 1em;
+  }
 }
