Ajuste para telas 1024px

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
   --cor-azul-degrade-menu: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
   --cor-azul: #002F52;
   --preto: #000;
+  --cinza: #474646;
+  --cinza-claro: #858585;
   --fonte-principal: 'Poppins';
   --fonte-secundaria: 'Josefin Sans';
 }
