ajuste para telas de 1728px

--- a/estilos/banner.css
+++ b/estilos/banner.css
@@ -42,3 +42,7 @@
   .banner__pesquisa {width: 50%;}
   .banner__pesquisa::placeholder {background-position: 5em;}
 }
+
+@media (min-width: 1728px) {
+  .banner__pesquisa {width: 30%;}
+}
